setup C file reader

--- a/c/tests/CMakeLists.txt
+++ b/c/tests/CMakeLists.txt
@@ -10,11 +10,14 @@ FetchContent_Declare(
 )
 
 FetchContent_MakeAvailable(libcheck)
-add_executable(c_test ../src/c.c c_test.c)
+add_executable(
+    aoc_test
+    aoc_test.c
+)
 
-target_link_libraries(c_test PUBLIC check pthread)
+target_link_libraries(aoc_test PUBLIC check pthread aoc)
 
-target_include_directories(c_test PUBLIC "${PROJECT_BINARY_DIR}")
+target_include_directories(aoc_test PUBLIC "${PROJECT_BINARY_DIR}")
 
-add_test(NAME c_test COMMAND c_test WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
-set_tests_properties(c_test PROPERTIES TIMEOUT 30)
+add_test(NAME aoc_test COMMAND aoc_test WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
+set_tests_properties(aoc_test PROPERTIES TIMEOUT 30)
