--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -13,7 +13,10 @@ set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -std=c99 -Wall -Werror -pedantic
 
 set(CMAKE_C_FLAGS_RELEASE "-std=c99 -Wall -Werror -pedantic -fstack-clash-protection -fstack-protector-all -fstack-protector-strong -Werror=format-security -Werror=implicit-function-declaration -pipe -O2 -s -DNDEBUG")
 
-add_library(c src/c.c)
+add_library(
+    aoc
+    src/reader.c
+)
 
-install(FILES build/libc.a DESTINATION "${INSTALL_PREFIX}/lib")
-install(FILES src/c.h DESTINATION "${INSTALL_PREFIX}/include")
+install(FILES build/aoc.a DESTINATION "${INSTALL_PREFIX}/lib")
+install(FILES src/aoc.h DESTINATION "${INSTALL_PREFIX}/include")
