--- a/c/tests/CMakeLists.txt
+++ b/c/tests/CMakeLists.txt
@@ -11,13 +11,13 @@ FetchContent_Declare(
 
 FetchContent_MakeAvailable(libcheck)
 add_executable(
-    aoc_test
-    aoc_test.c
+    day1_test
+    day1_test.c
 )
 
-target_link_libraries(aoc_test PUBLIC check pthread aoc)
+target_link_libraries(day1_test PUBLIC check pthread day1)
 
-target_include_directories(aoc_test PUBLIC "${PROJECT_BINARY_DIR}")
+target_include_directories(day1_test PUBLIC "${PROJECT_BINARY_DIR}")
 
-add_test(NAME aoc_test COMMAND aoc_test WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
-set_tests_properties(aoc_test PROPERTIES TIMEOUT 30)
+add_test(NAME day1_test COMMAND day1_test WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
+set_tests_properties(day1_test PROPERTIES TIMEOUT 30)
