--- a/cpp/tests/CMakeLists.txt
+++ b/cpp/tests/CMakeLists.txt
@@ -17,5 +17,16 @@ target_link_libraries(
     GTest::gtest_main
     day1
 )
+add_executable(
+   day2_test
+   day2_test.cc
+)
+
+target_link_libraries(
+    day2_test
+    GTest::gtest_main
+    day2
+)
 include(GoogleTest)
 gtest_discover_tests(day1_test)
+gtest_discover_tests(day2_test)
