--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -39,6 +39,11 @@ add_library(
     src/day3.c
 )
 
+add_library(
+    day4
+    src/day4.c
+)
+
 add_executable(
     aoc
     src/aoc.c
@@ -47,10 +52,12 @@ add_executable(
 target_link_libraries(day1 helpers)
 target_link_libraries(day2 helpers)
 target_link_libraries(day3 helpers)
+target_link_libraries(day4 helpers m)
 
 target_link_libraries(
     aoc
     day1
     day2
     day3
+    day4
 )
