--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -44,6 +44,11 @@ add_library(
     src/day4.c
 )
 
+add_library(
+    day5
+    src/day5.c
+)
+
 add_executable(
     aoc
     src/aoc.c
@@ -53,6 +58,7 @@ target_link_libraries(day1 helpers)
 target_link_libraries(day2 helpers)
 target_link_libraries(day3 helpers)
 target_link_libraries(day4 helpers m)
+target_link_libraries(day5 helpers)
 
 target_link_libraries(
     aoc
@@ -60,4 +66,5 @@ target_link_libraries(
     day2
     day3
     day4
+    day5
 )
