--- a/ocaml/bin/dune
+++ b/ocaml/bin/dune
@@ -1,4 +1,4 @@
 (executable
  (public_name ocaml)
  (name main)
- (libraries reader day1 day2 day3 day4 day5))
+ (libraries reader day1 day2 day3 day4 day5 day6))
