--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -49,6 +49,11 @@ add_library(
     src/day5.c
 )
 
+add_library(
+    day6
+    src/day6.c
+)
+
 add_executable(
     aoc
     src/aoc.c
@@ -59,6 +64,7 @@ target_link_libraries(day2 helpers)
 target_link_libraries(day3 helpers)
 target_link_libraries(day4 helpers m)
 target_link_libraries(day5 helpers)
+target_link_libraries(day6 helpers m)
 
 target_link_libraries(
     aoc
@@ -67,4 +73,5 @@ target_link_libraries(
     day3
     day4
     day5
+    day6
 )
