--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -40,6 +40,11 @@ add_library(
     src/day4.cc
 )
 
+add_library(
+    day6
+    src/day6.cc
+)
+
 add_executable(
     aoc
     src/main.cc
@@ -49,11 +54,13 @@ target_link_libraries(day1 helpers)
 target_link_libraries(day2 helpers)
 target_link_libraries(day3 helpers)
 target_link_libraries(day4 helpers m)
+target_link_libraries(day6 helpers m)
 target_link_libraries(
     aoc
     day1
     day2
     day3
     day4
+    day6
 )
 
