feat: cpp day 8

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -50,6 +50,11 @@ add_library(
     src/day7.cc
 )
 
+add_library(
+    day8
+    src/day8.cc
+)
+
 add_executable(
     aoc
     src/main.cc
@@ -60,6 +65,7 @@ target_link_libraries(day2 helpers)
 target_link_libraries(day3 helpers)
 target_link_libraries(day4 helpers m)
 target_link_libraries(day6 helpers m)
+target_link_libraries(day8 helpers)
 target_link_libraries(
     aoc
     day1
@@ -68,5 +74,6 @@ target_link_libraries(
     day4
     day6
     day7
+    day8
 )
 
