--- a/ocaml/bin/dune
+++ b/ocaml/bin/dune
@@ -1,4 +1,5 @@
 (executable
  (public_name ocaml)
  (name main)
- (libraries reader fmt day1 day2 day3 day4 day5 day6 day7 day8 day9 day10))
+ (libraries reader fmt day1 day2 day3 day4 day5
+            day6 day7 day8 day9 day10 day11))
