feat: cpp day 11

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -60,6 +60,11 @@ add_library(
     src/day9.cc
 )
 
+add_library(
+    day11
+    src/day11.cc
+)
+
 add_executable(
     aoc
     src/main.cc
@@ -72,6 +77,7 @@ target_link_libraries(day4 helpers m)
 target_link_libraries(day6 helpers m)
 target_link_libraries(day8 helpers)
 target_link_libraries(day9 helpers)
+target_link_libraries(day11 helpers m)
 target_link_libraries(
     aoc
     day1
@@ -82,5 +88,6 @@ target_link_libraries(
     day7
     day8
     day9
+    day11
 )
 
